*: add nlp posts
Signed-off-by: rudeigerc <rudeigerc@gmail.com>

--- a/config.toml
+++ b/config.toml
@@ -35,6 +35,8 @@ email = "edithwuly@163.com"
 [markup]
 [markup.highlight]
 style = "github"
+[markup.goldmark.renderer]
+unsafe = true
 
 [params]
 subtitle = "@edithwuly"
